--- a/bin/HEAT1D/mainwindow.ui
+++ b/bin/HEAT1D/mainwindow.ui
@@ -34,18 +34,21 @@
       <height>221</height>
      </rect>
     </property>
+    <property name="sizeAdjustPolicy">
+     <enum>QAbstractScrollArea::AdjustToContents</enum>
+    </property>
    </widget>
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>10</y>
+      <y>20</y>
       <width>401</width>
       <height>331</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>4</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -936,7 +939,7 @@
         <x>10</x>
         <y>10</y>
         <width>161</width>
-        <height>81</height>
+        <height>101</height>
        </rect>
       </property>
       <property name="title">
@@ -1024,8 +1027,8 @@
        <rect>
         <x>180</x>
         <y>10</y>
-        <width>101</width>
-        <height>81</height>
+        <width>121</width>
+        <height>101</height>
        </rect>
       </property>
       <property name="title">
@@ -1083,11 +1086,43 @@
         <string>200</string>
        </property>
       </widget>
+      <widget class="QLineEdit" name="lineEditTimeStep">
+       <property name="geometry">
+        <rect>
+         <x>70</x>
+         <y>70</y>
+         <width>31</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>3600</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_15">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>60</y>
+         <width>61</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>out time step (s)</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
+       </property>
+      </widget>
      </widget>
      <widget class="QPushButton" name="pushRunAllPeriod">
       <property name="geometry">
        <rect>
-        <x>290</x>
+        <x>310</x>
         <y>30</y>
         <width>81</width>
         <height>41</height>
@@ -1108,7 +1143,7 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>100</y>
+        <y>120</y>
         <width>361</width>
         <height>23</height>
        </rect>
@@ -1141,7 +1176,7 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>140</y>
+        <y>150</y>
         <width>91</width>
         <height>41</height>
        </rect>
