--- a/bin/HEAT1D/mainwindow.ui
+++ b/bin/HEAT1D/mainwindow.ui
@@ -2,12 +2,15 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
+  <property name="windowModality">
+   <enum>Qt::NonModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1159</width>
-    <height>559</height>
+    <width>1118</width>
+    <height>535</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,9 +21,9 @@
     <property name="geometry">
      <rect>
       <x>450</x>
-      <y>10</y>
-      <width>701</width>
-      <height>481</height>
+      <y>20</y>
+      <width>651</width>
+      <height>471</height>
      </rect>
     </property>
     <layout class="QFormLayout" name="layoutPlot"/>
@@ -29,9 +32,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>330</y>
+      <y>340</y>
       <width>431</width>
-      <height>161</height>
+      <height>151</height>
      </rect>
     </property>
     <property name="sizeAdjustPolicy">
@@ -42,13 +45,13 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>20</y>
+      <y>10</y>
       <width>431</width>
-      <height>311</height>
+      <height>321</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>4</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -57,9 +60,9 @@
      <widget class="QLineEdit" name="lineEditWidth">
       <property name="geometry">
        <rect>
-        <x>150</x>
+        <x>160</x>
         <y>80</y>
-        <width>31</width>
+        <width>41</width>
         <height>20</height>
        </rect>
       </property>
@@ -70,10 +73,10 @@
      <widget class="QLabel" name="label_3">
       <property name="geometry">
        <rect>
-        <x>30</x>
+        <x>10</x>
         <y>20</y>
-        <width>111</width>
-        <height>16</height>
+        <width>141</width>
+        <height>21</height>
        </rect>
       </property>
       <property name="text">
@@ -86,10 +89,10 @@
      <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
-        <x>30</x>
+        <x>20</x>
         <y>80</y>
-        <width>111</width>
-        <height>16</height>
+        <width>131</width>
+        <height>21</height>
        </rect>
       </property>
       <property name="text">
@@ -102,9 +105,9 @@
      <widget class="QLineEdit" name="lineEditDepth">
       <property name="geometry">
        <rect>
-        <x>150</x>
+        <x>160</x>
         <y>50</y>
-        <width>31</width>
+        <width>41</width>
         <height>20</height>
        </rect>
       </property>
@@ -115,10 +118,10 @@
      <widget class="QLabel" name="label_2">
       <property name="geometry">
        <rect>
-        <x>30</x>
+        <x>20</x>
         <y>50</y>
-        <width>111</width>
-        <height>16</height>
+        <width>131</width>
+        <height>20</height>
        </rect>
       </property>
       <property name="text">
@@ -131,9 +134,9 @@
      <widget class="QLineEdit" name="lineEditThickness">
       <property name="geometry">
        <rect>
-        <x>150</x>
+        <x>160</x>
         <y>20</y>
-        <width>31</width>
+        <width>41</width>
         <height>20</height>
        </rect>
       </property>
@@ -169,7 +172,7 @@
       <widget class="QLineEdit" name="lineEditIniTTop">
        <property name="geometry">
         <rect>
-         <x>180</x>
+         <x>200</x>
          <y>40</y>
          <width>51</width>
          <height>20</height>
@@ -182,7 +185,7 @@
       <widget class="QLabel" name="label_16">
        <property name="geometry">
         <rect>
-         <x>180</x>
+         <x>200</x>
          <y>20</y>
          <width>151</width>
          <height>16</height>
@@ -197,7 +200,7 @@
         <rect>
          <x>10</x>
          <y>20</y>
-         <width>141</width>
+         <width>161</width>
          <height>16</height>
         </rect>
        </property>
@@ -208,9 +211,9 @@
       <widget class="QLabel" name="label_20">
        <property name="geometry">
         <rect>
-         <x>180</x>
+         <x>200</x>
          <y>60</y>
-         <width>171</width>
+         <width>181</width>
          <height>16</height>
         </rect>
        </property>
@@ -221,7 +224,7 @@
       <widget class="QLineEdit" name="lineEditIniTBottom">
        <property name="geometry">
         <rect>
-         <x>180</x>
+         <x>200</x>
          <y>80</y>
          <width>51</width>
          <height>20</height>
@@ -236,8 +239,8 @@
         <rect>
          <x>10</x>
          <y>60</y>
-         <width>161</width>
-         <height>16</height>
+         <width>181</width>
+         <height>21</height>
         </rect>
        </property>
        <property name="text">
@@ -357,7 +360,6 @@
        </property>
        <property name="font">
         <font>
-         <weight>50</weight>
          <bold>false</bold>
         </font>
        </property>
@@ -460,7 +462,7 @@
           <x>210</x>
           <y>10</y>
           <width>151</width>
-          <height>81</height>
+          <height>91</height>
          </rect>
         </property>
         <property name="title">
@@ -470,7 +472,7 @@
          <property name="geometry">
           <rect>
            <x>110</x>
-           <y>10</y>
+           <y>20</y>
            <width>31</width>
            <height>20</height>
           </rect>
@@ -483,33 +485,39 @@
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>10</y>
-           <width>71</width>
-           <height>16</height>
+           <y>20</y>
+           <width>91</width>
+           <height>21</height>
           </rect>
          </property>
          <property name="text">
           <string>start (h)</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
         </widget>
         <widget class="QLabel" name="label_6">
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>30</y>
-           <width>71</width>
-           <height>16</height>
+           <y>40</y>
+           <width>91</width>
+           <height>21</height>
           </rect>
          </property>
          <property name="text">
           <string>hours</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
         </widget>
         <widget class="QLineEdit" name="lineEditPrecHours">
          <property name="geometry">
           <rect>
            <x>110</x>
-           <y>30</y>
+           <y>40</y>
            <width>31</width>
            <height>20</height>
           </rect>
@@ -522,7 +530,7 @@
          <property name="geometry">
           <rect>
            <x>110</x>
-           <y>50</y>
+           <y>60</y>
            <width>31</width>
            <height>20</height>
           </rect>
@@ -534,14 +542,17 @@
         <widget class="QLabel" name="label_7">
          <property name="geometry">
           <rect>
-           <x>10</x>
-           <y>50</y>
-           <width>71</width>
-           <height>16</height>
+           <x>0</x>
+           <y>60</y>
+           <width>101</width>
+           <height>20</height>
           </rect>
          </property>
          <property name="text">
           <string>hourly amount</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
         </widget>
        </widget>
@@ -613,7 +624,7 @@
        <rect>
         <x>10</x>
         <y>230</y>
-        <width>381</width>
+        <width>401</width>
         <height>51</height>
        </rect>
       </property>
@@ -623,7 +634,7 @@
       <widget class="QLineEdit" name="lineEditBottomT">
        <property name="geometry">
         <rect>
-         <x>100</x>
+         <x>130</x>
          <y>20</y>
          <width>31</width>
          <height>20</height>
@@ -638,7 +649,7 @@
         <rect>
          <x>10</x>
          <y>20</y>
-         <width>91</width>
+         <width>121</width>
          <height>16</height>
         </rect>
        </property>
@@ -649,10 +660,10 @@
       <widget class="QLabel" name="label_27">
        <property name="geometry">
         <rect>
-         <x>160</x>
+         <x>200</x>
          <y>20</y>
-         <width>91</width>
-         <height>16</height>
+         <width>71</width>
+         <height>21</height>
         </rect>
        </property>
        <property name="text">
@@ -662,7 +673,7 @@
       <widget class="QLineEdit" name="lineEditBottomZ">
        <property name="geometry">
         <rect>
-         <x>210</x>
+         <x>270</x>
          <y>20</y>
          <width>31</width>
          <height>20</height>
@@ -950,7 +961,7 @@
        <rect>
         <x>10</x>
         <y>10</y>
-        <width>171</width>
+        <width>181</width>
         <height>91</height>
        </rect>
       </property>
@@ -1022,7 +1033,7 @@
         <rect>
          <x>80</x>
          <y>50</y>
-         <width>91</width>
+         <width>81</width>
          <height>17</height>
         </rect>
        </property>
@@ -1040,13 +1051,12 @@
         <x>330</x>
         <y>30</y>
         <width>81</width>
-        <height>41</height>
+        <height>51</height>
        </rect>
       </property>
       <property name="font">
        <font>
         <pointsize>10</pointsize>
-        <weight>75</weight>
         <bold>true</bold>
        </font>
       </property>
@@ -1067,32 +1077,12 @@
        <number>0</number>
       </property>
      </widget>
-     <widget class="QLabel" name="labelInfo">
-      <property name="geometry">
-       <rect>
-        <x>20</x>
-        <y>250</y>
-        <width>311</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
      <widget class="QPushButton" name="pushCopyOutput">
       <property name="geometry">
        <rect>
         <x>10</x>
         <y>160</y>
-        <width>101</width>
+        <width>111</width>
         <height>51</height>
        </rect>
       </property>
@@ -1114,9 +1104,9 @@ to clipboard</string>
       <property name="geometry">
        <rect>
         <x>180</x>
-        <y>50</y>
-        <width>81</width>
-        <height>41</height>
+        <y>60</y>
+        <width>91</width>
+        <height>21</height>
        </rect>
       </property>
       <property name="text">
@@ -1132,7 +1122,7 @@ to clipboard</string>
      <widget class="QLineEdit" name="lineEditTimeStep">
       <property name="geometry">
        <rect>
-        <x>270</x>
+        <x>280</x>
         <y>60</y>
         <width>41</width>
         <height>20</height>
@@ -1145,7 +1135,7 @@ to clipboard</string>
      <widget class="QLineEdit" name="lineEditSimDuration">
       <property name="geometry">
        <rect>
-        <x>270</x>
+        <x>280</x>
         <y>30</y>
         <width>41</width>
         <height>20</height>
@@ -1158,14 +1148,33 @@ to clipboard</string>
      <widget class="QLabel" name="label_13">
       <property name="geometry">
        <rect>
-        <x>190</x>
+        <x>180</x>
         <y>30</y>
-        <width>81</width>
+        <width>91</width>
         <height>21</height>
        </rect>
       </property>
       <property name="text">
        <string>duration (h)</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="labelInfo">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>240</y>
+        <width>381</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
       </property>
      </widget>
     </widget>
@@ -1176,20 +1185,11 @@ to clipboard</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1159</width>
-     <height>21</height>
+     <width>1118</width>
+     <height>26</height>
     </rect>
    </property>
   </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-  </widget>
-  <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
